feat: pagination in services and types
