# cloud_registry/api/20201108.e0358db.openapi.yaml
@@ -20,15 +20,30 @@ paths:
       operationId: getServices
       tags:
         - services
+      parameters:
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: integer
+            example: 1
+        - name: page_size
+          in: query
+          required: false
+          schema:
+            type: integer
+            example: 10
       responses:
         '200':
           description: 'List of services'
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ExternalService'
+                oneOf:
+                  - type: array
+                    items:
+                      $ref: '#/components/schemas/ExternalService'
+                  - $ref: '#/components/schemas/PaginatedExternalService'
         '401':
           $ref: '#/components/responses/Unauthorized'
         '403':
@@ -80,9 +95,11 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ServiceType'
+                oneOf:
+                  - type: array
+                    items:
+                      $ref: '#/components/schemas/ServiceType'
+                  - $ref: '#/components/schemas/PaginatedServiceType'
         '401':
           $ref: '#/components/responses/Unauthorized'
         '403':
@@ -198,3 +215,41 @@ components:
       required:
         - status
         - title
+    PaginationMetadata:
+      description: 'Pagination Metadata'
+      type: object
+      required:
+        - page
+        - page_size
+        - total
+      properties:
+        page:
+          type: integer
+          description: "Current page of the response"
+          example: 1
+        page_size:
+          type: integer
+          description: "Number of entries in a page"
+          example: 10
+        total:
+          type: integer
+          description: "Total number of entries for the query"
+          example: 30
+    PaginatedExternalService:
+      type: object
+      properties:
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/ExternalService'
+        pagination:
+          $ref: '#/components/schemas/PaginationMetadata'
+    PaginatedServiceType:
+      type: object
+      properties:
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/ServiceType'
+        pagination:
+          $ref: '#/components/schemas/PaginationMetadata'
